fixed margin and gap in gallery

--- a/src/sass/_galerry-movies.scss
+++ b/src/sass/_galerry-movies.scss
@@ -1,24 +1,25 @@
 .gallery-movies {
+  max-width: 320px;
+  margin: 20px auto 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-inline: auto;
+  gap: 20px;
 
-  @media screen and (min-width: 320px) and (max-width: 768px) {
-    max-width: 320px;
-  }
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
+  @media screen and (min-width: 768px) {
+    margin-top: 60px;
     max-width: 768px;
+    gap: 32px;
   }
   @media screen and (min-width: 1024px) {
     max-width: 1024px;
-    justify-content: left;
+    gap: 32px 16px;
   }
 }
 
 .photo-card {
-  margin-top: 32px;
-  margin-left: 10px;
+  // margin-top: 32px;
+  // margin-left: 10px;
   width: 309px;
   height: 100%;
 }
@@ -115,4 +116,3 @@ a {
   background-color: #2b3e88;
   transition: all 0.3s;
 }
-
